[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeptrans"
version = "1.0.0"
description = "An asynchronous DeepL translator API client"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "UnBonWhisky", email = "contact@unbonwhisky.fr"},
]
maintainers = [
    {name = "UnBonWhisky", email = "contact@unbonwhisky.fr"},
]
keywords = ["deepl", "translation", "async", "api", "translator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Framework :: AsyncIO",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/UnBonWhisky/deeptrans"
Repository = "https://github.com/UnBonWhisky/deeptrans"
Issues = "https://github.com/UnBonWhisky/deeptrans/issues"
Documentation = "https://github.com/UnBonWhisky/deeptrans#readme"

[project.scripts]
dtrans = "deeptrans.__main__:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["deeptrans"]

[tool.hatch.build.targets.sdist]
include = [
    "/deeptrans",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
